@@ -1,5 +1,10 @@
 2003-11-29  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- Make the sidebar disappear for no-sidebar pages.
+
+2003-11-29  Shaun McCance  <shaunm@gnome.org>
+
 	* data/Makefile.am:
 	* data/toc.xml:
 	* po/POTFILES.in:
